--- a/index.html
+++ b/index.html
@@ -28,16 +28,23 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+          <h1>FotoChest</h1>
 
-<h1>FotoChest</h1>
-
-<p><a href="http://docs.derek.stegelman.com/fotochest">http://docs.derek.stegelman.com/fotochest</a></p>
+<p><a href="http://travis-ci.org/fotochest/fotochest"><img src="https://secure.travis-ci.org/fotochest/fotochest.png?branch=develop" alt="Build Status"></a></p>
 
 <p><a href="http://readthedocs.org/docs/fotochest/en/latest/">http://readthedocs.org/docs/fotochest/en/latest/</a></p>
+
+<p><img src="http://cl.ly/image/0W1E0l2x0s2z/Screen%20Shot%202012-10-14%20at%2010.34.23%20AM.png" alt="image"></p>
+
+<p><img src="http://cl.ly/image/1l3u2E0N390d/Screen%20Shot%202012-10-14%20at%2010.34.32%20AM.png" alt="image"></p>
+
+<p><img src="http://cl.ly/image/1D2z0M2T2I2d/Screen%20Shot%202012-10-14%20at%2010.34.42%20AM.png" alt="image"></p>
+
+<p><img src="http://cl.ly/image/2d0i3E1R2F0H/Screen%20Shot%202012-10-14%20at%2010.34.51%20AM.png" alt="image"></p>
+
+<h2>In Action</h2>
+
+<p><a href="http://photos.stegelman.com/">http://photos.stegelman.com/</a></p>
 
 <h2>Development Team</h2>
 
@@ -51,23 +58,20 @@ $ git checkout gh-pages
 <h2>Installation</h2>
 
 <pre><code>pip install -r conf/requirements.txt
+./run_all_tests.sh
+fab run_local_celery
 fab run_local
 </code></pre>
 
 <h2>Road Map</h2>
 
-<h3>Version 2.0 (Release in Spring of 2011) - March 1, 2011</h3>
+<p><a href="https://github.com/fotochest/fotochest/wiki/Roadmap">https://github.com/fotochest/fotochest/wiki/Roadmap</a></p>
+
+<h3>Thanks</h3>
 
 <ul>
-<li>Stability Increase - Done</li>
-<li>Some type of Themeing - Using WilliamsConcepts Template Library - Done</li>
-<li>Add Comments</li>
-<li>Update to Standard Core Libraries</li>
-</ul><h3>Version 2.2 - Refactor</h3>
-
-<ul>
-<li>Remove multi user support</li>
-<li>Goal is to make a better/Django version of Gallery, install on your website and theme it.</li>
+<li><a href="https://github.com/blueimp/Bootstrap-Image-Gallery/">https://github.com/blueimp/Bootstrap-Image-Gallery/</a></li>
+<li><a href="https://github.com/blueimp/jQuery-File-Upload/">https://github.com/blueimp/jQuery-File-Upload/</a></li>
 </ul>
         </section>
 
